# Konkantezer

./: .gitignore  CMakeLists.txt  README.md  auto-build-gcc.sh  auto-build-mingw.cmd
Examples/: Konkantezerexe.h  output_dump.txt
Examples/Out_Konkantezer/: KonkantezerLICENSEmd.h  KonkantezerREADMEmd.h  KonkantezerSourceCMakeListstxt.h  KonkantezerSourceCMakehin.h  KonkantezerSourceKonkantezerc.h  KonkantezerSourceKonkantezerh.h  KonkantezerSourcedirectScanUtilc.h  KonkantezerSourcedirectScanUtilh.h  KonkantezerSourcemainc.h  Konkantezerauto-build-gccsh.h  Konkantezerauto-build-mingwcmd.h  Konkantezermain.h  XTKonkantezer_01.c  XTKonkantezermain.c
Examples/Out_src/: XTsrc_01.c  XTsrcmain.c  srcCMakeListstxt.h  srcDirScanUtilc.h  srcDirScanUtilh.h  srcKKTZ256x256bmp.h  srcKKTZ256x256ico.h  srcKKTZ_256bmp.h  srcKKTZ_256ico.h  srcKonkantezerVersionh.h  srcKonkantezerVersionhin.h  srcKonkantezerc.h  srcKonkantezerh.h  srcKonkantezerrc.h  srcdirectScanUtilc.h  srcdirectScanUtilh.h  srcmain.h  srcmainc.h
Source/: CMake.h  CMake.h.in  CMakeLists.txt  Konkantezer.c  Konkantezer.h  Konkantezer.rc  directScanUtil.c  main.c
src/: CMakeLists.txt  Konkantezer.c  Konkantezer.h  Konkantezer.rc  main.c
